# protocol-mopp

./: .gitignore  CHANGELOG.md  README.md  TODO.md  protocol-mopp-wip.md
.github/workflows/: release_to_pypi.yml
doc/: TODO.md  mopp.plantuml  protocol-mopp.origin.md
javascript/: README.md  mopp.js
python/: README.md  TODO.md
python/mopp/: README.md  pyproject.toml
python/mopp/src/mopp/: __init__.py
python/mopp/src/mopp_protocol/: mopp.py
python/mopp/tests/: test_chat_server.py
python/testing/: test_chat_server.py
wip/: cwcom.yaml  mopp.yaml  test.py  topic  topic.md
