[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mopp"
version = "1.0.5"
authors = [
  { name="Dr. Gerolf Ziegenhain", email="gerolf.ziegenhain@gmail.com" },
]
description = "MOPP Morse Code Protocol"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Morse-Code-over-IP/protocol-mopp"
"Bug Tracker" = "https://github.com/Morse-Code-over-IP/protocol-mopp/issues"